RESOLVED FIXED 114953
BlackBerry: fix call to PluginLayerWebKitThread::setHolePunchRect()
https://bugs.webkit.org/show_bug.cgi?id=114953
Summary BlackBerry: fix call to PluginLayerWebKitThread::setHolePunchRect()
Alberto Garcia
Reported 2013-04-22 06:36:08 PDT
We have this error: Source/WebCore/plugins/blackberry/NPCallbacksBlackBerry.cpp:68:28: error: 'class WebCore::LayerWebKitThread' has no member named 'setHolePunchRect' The problem is that HolePunchData holds a pointer to LayerWebKitThread (PlatformLayer).
Attachments
Patch (1.38 KB, patch)
2013-04-22 06:44 PDT, Alberto Garcia
no flags
Alberto Garcia
Comment 1 2013-04-22 06:44:17 PDT
Created attachment 199023 [details] Patch This would be the simplest patch, and is consistent with what it's already being done in other parts of the same code. However I wonder if it wouldn't be better to change the pointer in HolePunchData directly.
Rob Buis
Comment 2 2013-05-09 11:07:58 PDT
Comment on attachment 199023 [details] Patch LGTM.
WebKit Commit Bot
Comment 3 2013-05-09 11:37:53 PDT
Comment on attachment 199023 [details] Patch Clearing flags on attachment: 199023 Committed r149827: <http://trac.webkit.org/changeset/149827>
WebKit Commit Bot
Comment 4 2013-05-09 11:37:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.