BlackBerry: fix call to PluginLayerWebKitThread::setHolePunchRect() https://bugs.webkit.org/show_bug.cgi?id=114953

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-05-09
Reviewed by Rob Buis.

data->layer needs a cast in order to call setHolePunchRect().

* plugins/blackberry/NPCallbacksBlackBerry.cpp:
(WebCore::npSetHolePunchHandler):

Canonical link: https://commits.webkit.org/134287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149827 268f45cc-cd09-0410-ab3c-d52691b4dbfc